# HeatSim

./: .gitignore  CMakeLists.txt  README.md  requirements.txt  test_cuda.sh  test_params.sh  test_phase1.sh  test_physics.sh
docs/: heat_sim_project_overview.md  phase1_summary.md  project_structure.md  roadmap.md
include/glad/: glad.h
shaders/: rod.frag  rod.vert
src/: Application.cpp  Application.h  Renderer.cpp  Renderer.h  application.cpp  common.h  glad.c  main.cpp  renderer.cpp  shader.cpp  ui_controller.cpp  ui_controller.h
src/core/: application.cpp  application.h
src/cuda/: cuda_gl_interop.cpp  cuda_gl_interop.h  cuda_manager.cpp  cuda_manager.h  heat_kernels.cu  heat_kernels.cuh
src/graphics/: renderer.cpp  renderer.h  shader.h
src/simulation/: cuda_simulation_engine.cpp  cuda_simulation_engine.h  simulation_engine.cpp  simulation_engine.h
src/ui/: ui_controller.cpp  ui_controller.h
src/utils/: logger.cpp  logger.h
